# MYSTRAN

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  README.md  mystran.rc
Build_Test_Cases/: .gitignore
Build_Test_Cases/buckling/: beam_all_shapes.bdf  buck_multi_statsub.bdf  buck_statsub_default.bdf  quad4_column.bdf
Build_Test_Cases/modes/: modes_multi.bdf  modes_multi3.bdf  modes_multi_mixed.bdf  modes_smoke.bdf
Source/ARPACK/: ARPACK_INFO_MSG.f90
Source/EMG/: EXPAND_MASS_DOFS.f90
Source/Interfaces/: ALLOCATED_MEMORY_Interface.f90  ALLOCATE_CB_ELM_OTM_Interface.f90  ALLOCATE_CB_GRD_OTM_Interface.f90  ALLOCATE_COL_VEC_Interface.f90  ALLOCATE_DOF_TABLES_Interface.f90  ALLOCATE_EIGEN1_MAT_Interface.f90  ALLOCATE_EMS_ARRAYS_Interface.f90  ALLOCATE_FEMAP_DATA_Interface.f90  ALLOCATE_FULL_MAT_Interface.f90  ALLOCATE_IN4_FILES_Interface.f90  ALLOCATE_L1_MGG_Interface.f90  ALLOCATE_L2_GMN_2_Interface.f90  ALLOCATE_L2_GOA_2_Interface.f90  ALLOCATE_L6_2_Interface.f90  ALLOCATE_LAPACK_MAT_Interface.f90  ALLOCATE_LINK9_STUF_Interface.f90  ALLOCATE_MISC_MAT_Interface.f90  ALLOCATE_MODEL_STUF_Interface.f90  ALLOCATE_NL_PARAMS_Interface.f90  ALLOCATE_RBGLOBAL_Interface.f90  ALLOCATE_SCR_CCS_MAT_Interface.f90  ALLOCATE_SCR_CRS_MAT_Interface.f90  ALLOCATE_SPARSE_ALG_Interface.f90  ALLOCATE_SPARSE_MAT_Interface.f90  ALLOCATE_STF_ARRAYS_Interface.f90  ALLOCATE_TEMPLATE_Interface.f90  ARPACK_INFO_MSG_Interface.f90  ARRAY_SIZE_ERROR_1_Interface.f90  AUTOSPC_SUMMARY_MSGS_Interface.f90  B3D_ISOPARAMETRIC_Interface.f90  BAILOUT_CHECK_Interface.f90  BANDGEN_LAPACK_DGB_Interface.f90  BANDGEN_LAPACK_DPB_Interface.f90  BANDIT_FILES_Interface.f90  BANDSIZ_Interface.f90  BAR1_Interface.f90  BART_Interface.f90  BAR_MARGIN_Interface.f90  BBDKQ_Interface.f90  BBMIN3_Interface.f90  (+602 more)
Source/LK2/: ALLOCATE_L2_GMN_2.f90  ALLOCATE_L2_GOA_2.f90  DEALLOCATE_L2_GMN_2.f90  DEALLOCATE_L2_GOA_2.f90  LINK2.f90  REBUILD_KLLD_FROM_KGGD.f90  REDUCE_A_LR.f90  REDUCE_F_AO.f90  REDUCE_KAAD_TO_KLLD.f90  REDUCE_KAA_TO_KLL.f90  REDUCE_KFFD_TO_KAAD.f90  REDUCE_KFF_TO_KAA.f90  REDUCE_KGG_TO_KNN.f90  REDUCE_KNND_TO_KFFD.f90  REDUCE_KNN_TO_KFF.f90  REDUCE_MAA_TO_MLL.f90  REDUCE_MFF_TO_MAA.f90  REDUCE_MGG_TO_MNN.f90  REDUCE_MNN_TO_MFF.f90  REDUCE_N_FS.f90  REDUCE_PA_TO_PL.f90  REDUCE_PF_TO_PA.f90  REDUCE_PG_TO_PN.f90  REDUCE_PN_TO_PF.f90  SOLVE_GMN.f90  SOLVE_GOA.f90  SOLVE_UO0.f90  STIFF_MAT_EQUIL_CHK.f90
Source/LK3/: EPSCALC.f90  LINK3.f90  VECINORM.f90
Source/LK4/: CALC_GEN_MASS.f90  DSBAND_PREFAC.f  EIG_GIV_MGIV.f90  EIG_INV_PWR.f90  EIG_LANCZOS_ARPACK.f03  EIG_LANCZOS_ARPACK.f90  EIG_LANCZOS_ARPACK_ADAPTIVE.f90  EIG_SUMMARY.f90  INVERT_EIGENS.f90  LINK4.f90  RENORM_ON_MASS.f90
Source/LK5/: BUILD_A_LR.f90  BUILD_F_AO.f90  BUILD_G_NM.f90  BUILD_N_FS.f90  EXPAND_PHIXA_TO_PHIXG.f90  LINK5.f90  RENORM.f90
Source/LK6/: ALLOCATE_L6_2.f90  CALC_CB_MEFM_MPF.f90  CALC_KRRcb.f90  CALC_MRN.f90  CALC_MRRcb.f90  CALC_PHIZL.f90  DEALLOCATE_L6_2.f90  INTERFACE_FORCE_LTM.f90  LINK6.f90  MERGE_KXX.f90  MERGE_LTM.f90  MERGE_MXX.f90  MERGE_PHIXA.f90  NET_CG_LOADS_LTM.f90  SOLVE_DLR.f90  SOLVE_PHIZL1.f90
Source/MAIN/: GET_MYSTRAN_DIR.f90  MYSTRAN.f90  MYSTRAN_FILES.f90  PRINT_BUILD_INFO.F90  PROCESS_INCLUDE_FILES.f90  READ_INI.f90  READ_INPUT_FILE_NAME.f90  SET_BLAS_THREADS.F03
Source/Modules/: ALLOCATED_ARRAY_DATA.f90  ARPACK_MATRICES_1.f90  CC_OUTPUT_DESCRIBERS.f90  COL_VECS.f90  CONSTANTS_1.f90  CONSTANTS_GAUSS.f90  DEBUG_PARAMETERS.f90  DERIVED_DATA_TYPES.f90  DOF_TABLES.f90  EIGEN_MATRICES_1.f90  EMS_ARRAYS.f90  FEMAP_ARRAYS.f90  FULL_MATRICES.f90  INPUTT4_MATRICES.f90  IOUNT1.f90  LAPACK_DPB_MATRICES.f90  LINK9_STUFF.f90  LSQ_MYSTRAN.f90  MACHINE_PARAMS.f90  MISC_MATRICES.f90  MODEL_STUF.f03  MODEL_STUF.f90  MYSTRAN_Version.f90  NONLINEAR_PARAMS.f90  OUTPUT4_MATRICES.f90  PARAMS.f90  PENTIUM_II_KIND.f90  RIGID_BODY_DISP_MATS.f90  SCONTR.f03  SCONTR.f90  SCRATCH_MATRICES.f90  SPARSE_ALG_ARRAYS.f90  SPARSE_MATRICES.f90  STF_ARRAYS.f90  STF_TEMPLATE_ARRAYS.f90  SuperLU_STUF.f90  TIMDAT.f90
Source/USE_IFs/: ALLOCATED_MEMORY_USE_IFs.f90  ALLOCATE_CB_ELM_OTM_USE_IFs.f90  ALLOCATE_CB_GRD_OTM_USE_IFs.f90  ALLOCATE_COL_VEC_USE_IFs.f90  ALLOCATE_DOF_TABLES_USE_IFs.f90  ALLOCATE_EIGEN1_MAT_USE_IFs.f90  ALLOCATE_EMS_ARRAYS_USE_IFs.f90  ALLOCATE_FEMAP_DATA_USE_IFs.f90  ALLOCATE_FULL_MAT_USE_IFs.f90  ALLOCATE_IN4_FILES_USE_IFs.f90  ALLOCATE_L1_MGG_USE_IFs.f90  ALLOCATE_L2_GMN_2_USE_IFs.f90  ALLOCATE_L2_GOA_2_USE_IFs.f90  ALLOCATE_L6_2_USE_IFs.f90  ALLOCATE_LAPACK_MAT_USE_IFs.f90  ALLOCATE_LINK9_STUF_USE_IFs.f90  ALLOCATE_MISC_MAT_USE_IFs.f90  ALLOCATE_MODEL_STUF_USE_IFs.f90  ALLOCATE_NL_PARAMS_USE_IFs.f90  ALLOCATE_RBGLOBAL_USE_IFs.f90  ALLOCATE_SCR_CCS_MAT_USE_IFs.f90  ALLOCATE_SCR_CRS_MAT_USE_IFs.f90  ALLOCATE_SPARSE_ALG_USE_IFs.f90  ALLOCATE_SPARSE_MAT_USE_IFs.f90  ALLOCATE_STF_ARRAYS_USE_IFs.f90  ALLOCATE_TEMPLATE_USE_IFs.f90  ARPACK_INFO_MSG_USE_IFs.f90  ARRAY_SIZE_ERROR_1_USE_IFs.f90  AUTOSPC_SUMMARY_MSGS_USE_IFs.f90  B3D_ISOPARAMETRIC_USE_IFs.f90  BANDGEN_LAPACK_DGB_USE_IFs.f90  BANDGEN_LAPACK_DPB_USE_IFs.f90  BANDIT_FILES_USE_IFs.f90  BANDSIZ_USE_IFs.f90  BAR1_USE_IFs.f90  BART_USE_IFs.f90  BAR_MARGIN_USE_IFs.f90  BBDKQ_USE_IFs.f90  BBMIN3_USE_IFs.f90  BBMIN4_USE_IFs.f90  (+573 more)
Source/UTIL/: ALLOCATED_MEMORY.f90  ALLOCATE_CB_ELM_OTM.f90  ALLOCATE_CB_GRD_OTM.f90  ALLOCATE_COL_VEC.f90  ALLOCATE_DOF_TABLES.f90  ALLOCATE_EIGEN1_MAT.f90  ALLOCATE_FULL_MAT.f90  ALLOCATE_IN4_FILES.f90  ALLOCATE_LAPACK_MAT.f90  ALLOCATE_MISC_MAT.f90  ALLOCATE_MODEL_STUF.f90  ALLOCATE_NL_PARAMS.f90  ALLOCATE_RBGLOBAL.f90  ALLOCATE_SCR_CCS_MAT.f90  ALLOCATE_SCR_CRS_MAT.f90  ALLOCATE_SPARSE_ALG.f90  ALLOCATE_SPARSE_MAT.f90  ARRAY_SIZE_ERROR_1.f90  AUTOSPC_SUMMARY_MSGS.f90  BAILOUT_CHECK.f90  BANDGEN_LAPACK_DGB.f90  BANDGEN_LAPACK_DPB.f90  BANDSIZ.f90  CALC_TDOF_ROW_START.f90  COND_NUM.f90  (+158 more)
dependencies_licenses/: gpl-3.0-with-gcc-exception.txt  netlib-blas-lapack.txt
dev_docs/: lapack_unification_prompt.md
extra_licenses/: blis.txt  mkl.txt
metis/metis_patches/: CMakeLists.txt
superlu_mt_patches/: CMakeLists.txt
superlu_patches/: CMakeLists.txt
(+411 files in other folders)
